# covert-connect

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: app.yml  server.yaml
conf/: covert-connect.service  template_client.yaml  template_server.yaml
crates/cc-client/: Cargo.toml
crates/cc-client/src/: config.rs  main.rs
crates/cc-server/: Cargo.toml
crates/cc-server/src/: config.rs  main.rs  server.rs
crates/client/: Cargo.toml
crates/client/src/: config.rs  lib.rs  monitor_stream.rs  pac_file_service.rs  protocol.rs  proxy.rs  ttfb_stream.rs  upgrade_stream.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: cipher.rs  config.rs  kdf.rs  lib.rs  stream.rs
crates/crypto/src/cipher/: ring_like_crypto.rs  rustls_crypto.rs
crates/sys-connections/: Cargo.toml
crates/sys-connections/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/sys-proxy/: Cargo.toml
crates/sys-proxy/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/sys-proxy/src/macos/: ffi.rs  nw_path_monitor.rs
crates/tests/: Cargo.toml
crates/tests/tests/: client-server.rs
docs/: protocol.md
flutter/covert_connect_ui/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
flutter/covert_connect_ui/android/app/: build.gradle.kts
flutter/covert_connect_ui/android/app/src/main/: AndroidManifest.xml
flutter/covert_connect_ui/android/app/src/main/kotlin/com/example/covert_connect/: MainActivity.kt
flutter/covert_connect_ui/android/app/src/main/res/values/: colors.xml
flutter/covert_connect_ui/integration_test/: simple_test.dart
flutter/covert_connect_ui/ios/Runner/: Info.plist
flutter/covert_connect_ui/ios/Runner.xcodeproj/: project.pbxproj
flutter/covert_connect_ui/lib/: di.dart  main.dart
flutter/covert_connect_ui/lib/src/: home.dart  log.dart  options.dart
flutter/covert_connect_ui/lib/src/apps/: add_app.dart  apps.dart
flutter/covert_connect_ui/lib/src/domains/: add_domain.dart  domains.dart
flutter/covert_connect_ui/lib/src/domains/widgets/: add_domain.dart  domains_list.dart
flutter/covert_connect_ui/lib/src/log/: log.dart
flutter/covert_connect_ui/lib/src/log/utils/: ansi_utils.dart  log_message.dart
flutter/covert_connect_ui/lib/src/log/widgets/: log_message.dart
flutter/covert_connect_ui/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
flutter/covert_connect_ui/lib/src/rust/api/: log.dart  rev_lines_ex.dart  service.dart  wrappers.dart
flutter/covert_connect_ui/lib/src/services/: app_state_service.dart  proxy_service.dart  proxy_service_impl.dart  proxy_service_mock.dart
flutter/covert_connect_ui/lib/src/services/utils/: serialization.dart
flutter/covert_connect_ui/lib/src/status/: add_edit_server.dart  status.dart
flutter/covert_connect_ui/lib/src/status/widgets/: server_list.dart  server_select_mode.dart  server_state_indicator.dart  state_toggle.dart  traffic_cell.dart  traffic_graph.dart
flutter/covert_connect_ui/lib/src/utils/: child_router.dart  color_utils.dart  debounce.dart  exception_helper.dart  extensions.dart  graph_interval.dart  router.dart  svg.dart  text_utils.dart  text_width.dart  uri.dart  utils.dart
flutter/covert_connect_ui/lib/src/utils/desktop/: init.dart  window_utils.dart
flutter/covert_connect_ui/lib/src/widgets/: app_cupertino_router.dart  app_icon_button.dart  app_theme.dart  button.dart  hover.dart  input.dart  route_list.dart  text_with_tooltip.dart  toast.dart
flutter/covert_connect_ui/lib/src/widgets/desktop/: caption_button_base.dart  caption_buttons_macos.dart  caption_buttons_windows.dart  desktop_app_bar.dart  desktop_icon_button.dart  desktop_theme.dart
flutter/covert_connect_ui/lib/src/widgets/mobile/: mobile_footer.dart  mobile_theme.dart
flutter/covert_connect_ui/linux/: CMakeLists.txt
flutter/covert_connect_ui/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/covert_connect_ui/linux/runner/: my_application.cc
flutter/covert_connect_ui/macos/: Podfile
flutter/covert_connect_ui/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/covert_connect_ui/macos/Runner/: MainFlutterWindow.swift
flutter/covert_connect_ui/macos/Runner.xcodeproj/: project.pbxproj
flutter/covert_connect_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/covert_connect_ui/macos/Runner/Configs/: AppInfo.xcconfig
flutter/covert_connect_ui/rust/: Cargo.toml
flutter/covert_connect_ui/rust/src/: frb_generated.rs
flutter/covert_connect_ui/rust/src/api/: log.rs  mod.rs  rev_lines_ex.rs  service.rs  wrappers.rs
flutter/covert_connect_ui/rust_builder/: pubspec.yaml
flutter/covert_connect_ui/rust_builder/android/: build.gradle  settings.gradle
flutter/covert_connect_ui/rust_builder/android/src/main/: AndroidManifest.xml
flutter/covert_connect_ui/rust_builder/ios/: rust_lib_covert_connect.podspec
flutter/covert_connect_ui/rust_builder/linux/: CMakeLists.txt
flutter/covert_connect_ui/rust_builder/macos/: rust_lib_covert_connect.podspec
flutter/covert_connect_ui/rust_builder/windows/: CMakeLists.txt
flutter/covert_connect_ui/test/: widget_test.dart
flutter/covert_connect_ui/windows/: CMakeLists.txt
flutter/covert_connect_ui/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/covert_connect_ui/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
scripts/: update-server.sh
