[workspace]
members = ["crates/*", "flutter/covert_connect_ui/rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["WickedCode"]
documentation = ""
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.82"
is-terminal = "0.4.12"
hyper = { version = "1.3.0", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.1"
bytes = "1.6.0"
shellexpand = "3.1.0"
futures = "0.3.30"
chrono = "0.4.38"
serde_json = "1.0"
serde = { version = "1.0.200", features = ["derive"] }
config = "0.14.0"
clap = { version = "4.5.4", features = ["derive"] }
axum = "0.7.5"
tower = "0.4.13"
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
base64 = "0.22.1"
pin-project-lite = "0.2.14"
colored = "2.1.0"
argon2 = "0.5.3"
blake2 = "0.10.6"
blake3 = "1.5.1"
aead = "0.5.2"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["tls12", "logging"]}
webpki-roots = "0.26.1"
aes-gcm = "0.10.3"
aws-lc-rs = "1.6"
chacha20poly1305 = "0.10.1"
ring = "0.17"
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
const_format = "0.2.32"
num_enum = "0.7.2"

sys-proxy = { path = "crates/sys-proxy" }
sys-connections = { path = "crates/sys-connections" }
crypto = { path = "crates/crypto" }
client = { path = "crates/client" }
cc-server = { path = "crates/cc-server" }

[profile.release-prod]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = true
