[package]
name = "cc-client"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
config.workspace = true
is-terminal.workspace = true
serde.workspace = true
shellexpand.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tokio.workspace = true

client.workspace = true
crypto.workspace = true
