[package]
name = "cc-server"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
config.workspace = true
is-terminal.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
shellexpand.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

crypto.workspace = true
