[package]
name = "client"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
hyper-util.workspace = true
hyper.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
chrono.workspace = true
rand.workspace = true
rand_chacha.workspace = true
pin-project-lite.workspace = true
bytes.workspace = true
parking_lot.workspace = true
const_format.workspace = true
num_enum.workspace = true

tokio-rustls.workspace = true
webpki-roots.workspace = true

crypto.workspace = true
sys-proxy.workspace = true


[features]
aws_lc_rs = ["tokio-rustls/aws_lc_rs"]
default = ["rustls_ring"]
rustls_ring = ["tokio-rustls/ring"]
