[package]
name = "crypto"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aes-gcm = {workspace = true, optional = true}
aws-lc-rs = {workspace = true, optional = true}
chacha20poly1305 = {workspace = true, optional = true}
ring = {workspace = true, optional = true}

anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
blake2.workspace = true
blake3.workspace = true
bytes.workspace = true
futures.workspace = true
pin-project-lite.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
serde.workspace = true
tokio.workspace = true
num_enum.workspace = true

hex-literal = "0.4.1"

[features]
aws_lc_rs = ["dep:aws-lc-rs"]
default = ["ring"]
ring = ["dep:ring"]
rust_crypto = ["dep:aes-gcm", "dep:chacha20poly1305"]
