[package]
name = "sys-connections"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_System_Threading", "Win32_Networking_WinSock"] }
