[package]
name = "rust_lib_covert_connect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio-rev-lines = "0.2.1"
futures-util = "0.3"
auto-launch = "0.5.0"

tokio-rustls.workspace = true 
webpki-roots.workspace = true

anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true

tracing-subscriber.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot.workspace = true

sys-proxy.workspace = true
crypto.workspace = true
client.workspace = true

[features]
default = ["rustls_ring"]
aws_lc_rs = ["tokio-rustls/aws_lc_rs"]
rustls_ring = ["tokio-rustls/ring"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
